# gpx-tools

./: README.md  pyproject.toml
config/: gpx_maxpath.yml  gpx_rdp.yml
conversion/: igc2gpx.sh
data_maxpath/gpx_input/: 03RA35P2.gpx  04BA35P3.gpx  04IA35P2.gpx  04LA35P1.gpx
data_maxpath/gpx_processed/: 20100418_04IA35P2_O66_326.gpx  20100421_04LA35P1_O66_462.gpx
data_rdp/gpx_purged/: 20200521_strada_century.gpx
data_rdp/gpx_rdp/: 20200521_strada_century.gpx
src/gpx_tools/: gpx_io.py  gpx_maxpath.py  gpx_rdp.py
